// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management list item component when item appears in view after image is loaded renders media broken icon when image onerror triggered 1`] = `
<gl-icon-stub
  class="text-secondary"
  name="media-broken"
  size="32"
/>
`;

exports[`Design management list item component with notes renders item with multiple comments 1`] = `
<router-link-stub
  class="card cursor-pointer text-plain js-design-list-item design-list-item design-list-item-new"
  to="[object Object]"
>
  <div
    class="card-body p-0 d-flex-center overflow-hidden position-relative"
  >
    <!---->
     
    <gl-intersection-observer-stub>
      <!---->
       
      <img
        alt="test"
        class="block mx-auto mw-100 mh-100 design-img"
        data-qa-selector="design_image"
        src=""
      />
    </gl-intersection-observer-stub>
  </div>
   
  <div
    class="card-footer d-flex w-100"
  >
    <div
      class="d-flex flex-column str-truncated-100"
    >
      <span
        class="bold str-truncated-100"
        data-qa-selector="design_file_name"
      >
        test
      </span>
       
      <span
        class="str-truncated-100"
      >
        
        Updated 
        <timeago-stub
          cssclass=""
          time="01-01-2019"
          tooltipplacement="bottom"
        />
      </span>
    </div>
     
    <div
      class="ml-auto d-flex align-items-center text-secondary"
    >
      <icon-stub
        class="ml-1"
        name="comments"
        size="16"
      />
       
      <span
        aria-label="2 comments"
        class="ml-1"
      >
        
        2
      
      </span>
    </div>
  </div>
</router-link-stub>
`;

exports[`Design management list item component with notes renders item with single comment 1`] = `
<router-link-stub
  class="card cursor-pointer text-plain js-design-list-item design-list-item design-list-item-new"
  to="[object Object]"
>
  <div
    class="card-body p-0 d-flex-center overflow-hidden position-relative"
  >
    <!---->
     
    <gl-intersection-observer-stub>
      <!---->
       
      <img
        alt="test"
        class="block mx-auto mw-100 mh-100 design-img"
        data-qa-selector="design_image"
        src=""
      />
    </gl-intersection-observer-stub>
  </div>
   
  <div
    class="card-footer d-flex w-100"
  >
    <div
      class="d-flex flex-column str-truncated-100"
    >
      <span
        class="bold str-truncated-100"
        data-qa-selector="design_file_name"
      >
        test
      </span>
       
      <span
        class="str-truncated-100"
      >
        
        Updated 
        <timeago-stub
          cssclass=""
          time="01-01-2019"
          tooltipplacement="bottom"
        />
      </span>
    </div>
     
    <div
      class="ml-auto d-flex align-items-center text-secondary"
    >
      <icon-stub
        class="ml-1"
        name="comments"
        size="16"
      />
       
      <span
        aria-label="1 comment"
        class="ml-1"
      >
        
        1
      
      </span>
    </div>
  </div>
</router-link-stub>
`;
